template changes for the cancel and button and plus icon
Change-Id: I82fde38d358e2cd0b94a277f7b256293c7d64887

--- a/webroot/common/ui/templates/core.common.tmpl
+++ b/webroot/common/ui/templates/core.common.tmpl
@@ -882,8 +882,15 @@
      <div id="aps-button-container"></div>
     </div>
     <div id="aps-landing-container" style="display:none;height:590px;position: relative;">
-     <div id="aps-main-container"></div>
+     <div id="aps-main-container">
+        <div id="aps-sub-container"></div>
+        <div style="float:right;">
+           <button class="btn btn-mini btn-primary" id="aps-main-back-button">Cancel</button>
+        </div>
+     </div>
      <div id="aps-overlay-container">
+      <div style="float:right;"><i id="aps-create-fwpolicy-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
+      <div style="float:right;"><i id="aps-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
       <div id="aps-gird-container"></div>
        <div id="aps-footer-container">
         <div style="float:left;">
