Fixed the height issue in the template
Change-Id: I5c962f9ba08a9e795b62033398903576c90a8450

--- a/webroot/common/ui/templates/core.common.tmpl
+++ b/webroot/common/ui/templates/core.common.tmpl
@@ -881,7 +881,7 @@
      </div>
      <div id="aps-button-container"></div>
     </div>
-    <div id="aps-landing-container" style="display:none;height:590px;position: relative;">
+    <div id="aps-landing-container">
      <div id="aps-main-container">
         <div id="aps-sub-container"></div>
         <div style="float:right;">
