--- a/webroot/common/ui/templates/core.common.tmpl
+++ b/webroot/common/ui/templates/core.common.tmpl
@@ -888,15 +888,18 @@
            <button class="btn btn-mini btn-primary" id="aps-main-back-button">Cancel</button>
         </div>
      </div>
+     <div id="overlay-background-id"></div>
      <div id="aps-overlay-container">
       <div style="float:right;"><i id="aps-create-fwpolicy-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
-      <div style="float:right;"><i id="aps-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
+      <div class="close-btn-container">
+      <i id="aps-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
        <div class="dropdown" style="float:right;">
         <div class="dropdown-toggle fa fa-ellipsis-h" type="button" data-toggle="dropdown"></div>
         <ul class="dropdown-menu ellipsis">
           <li><a href="#" id="view-address-group">View Address Groups</a></li>
           <li><a href="#" id="view-service-group">View Service Groups</a></li>
           <li><a href="#" id="view-visble-tags">View Visible Tags</a></li>
+           <li><a href="#" id="create-firewall-policy">View Firewall Policies</a></li>
         </ul>
      </div>
       <div id="aps-gird-container"></div>
