Fixed the scroll issue in the overlay panel.
Change-Id: I58680bf19abed8730bd9101081de61eb7c92c846

--- a/webroot/common/ui/templates/core.common.tmpl
+++ b/webroot/common/ui/templates/core.common.tmpl
@@ -890,7 +890,7 @@
      </div>
      <div id="overlay-background-id"></div>
      <div id="aps-overlay-container">
-      <div style="float:right;"><i id="aps-create-fwpolicy-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
+      <div class="close-btn-container"><i id="aps-create-fwpolicy-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
       <div class="close-btn-container">
       <i id="aps-remove-icon" class="fa fa-remove" aria-hidden="true" style="font-size: 15px;color: #3182bd;margin: 10px 15px 0px 0px;"></i></div>
        <div class="dropdown" style="float:right;">
