Cancel button style changed to grey color
Change-Id: If1100396de881c0fd369ec07b692e998d97092c7

--- a/webroot/common/ui/templates/core.common.tmpl
+++ b/webroot/common/ui/templates/core.common.tmpl
@@ -866,7 +866,6 @@
     <form name="{{prefixId}}Form" id="{{modalId}}-form" onsubmit="return false;" class="">
     </form>
 </script>
-
 <script type="text/x-handlebars-template" id="application-policy-set-edit-form-template">
     <div class="alert alert-error" style="display:none;" data-bind="visible: errors().{{prefixId}}_form_error">
         <strong>Error: </strong>
@@ -885,7 +884,7 @@
      <div id="aps-main-container">
         <div id="aps-sub-container"></div>
         <div style="float:right;">
-           <button class="btn btn-mini btn-primary" id="aps-main-back-button">Cancel</button>
+           <button class="btn btn-mini" id="aps-main-back-button">Cancel</button>
         </div>
      </div>
      <div id="overlay-background-id"></div>
@@ -905,7 +904,7 @@
       <div id="aps-gird-container"></div>
        <div id="aps-footer-container">
         <div style="float:left;">
-           <button class="btn btn-mini btn-primary" id="aps-back-button">Back</button>
+           <button class="btn btn-mini" id="aps-back-button">Cancel</button>
         </div>
         <div style="float:right;">
            <button class="btn btn-mini btn-primary" id="aps-save-button">Save</button>
